@@ -1,4 +1,4 @@
-# The IKE Scanner (ike-scan) is Copyright (C) 2003-2005 Roy Hills,
+# The IKE Scanner (ike-scan) is Copyright (C) 2003-2007 Roy Hills,
 # NTA Monitor Ltd.
 #
 # This program is free software; you can redistribute it and/or
